Created demo HAL bin and float signals and demonstrated HAL to GUI output

--- a/BallScrewControl.ini
+++ b/BallScrewControl.ini
@@ -85,11 +85,12 @@ DEFAULT_LINEAR_VELOCITY = 50.00
 SPINDLES = 1
 
 [HAL]
-HALUI = halui
+#HALUI = halui
 HALFILE = core_sim.hal
 HALFILE = simulated_home.hal
+HALFILE = BallScrewControlTest.hal
 #HALFILE = custom.hal
-#POSTGUI_HALFILE = qtdragon_postgui.hal
+POSTGUI_HALFILE = BallScrewControl_postgui.hal
 
 [HALUI]
 # no content
