--- a/BallScrewControl.ini
+++ b/BallScrewControl.ini
@@ -3,7 +3,6 @@
 
 [EMC]
 VERSION = 1.1
-#MACHINE = qtdragon
 MACHINE = BallScrewControl
 DEBUG = 0x00000000
 
@@ -11,7 +10,6 @@ DEBUG = 0x00000000
 VCP = BallScrewControl
 DISPLAY = qtvcp BallScrewControl
 EDITOR = gedit
-#DISPLAY = qtvcp qtdragon
 #PREFERENCE_FILE_PATH = qtdragon.pref
 POSITION_OFFSET = RELATIVE
 POSITION_FEEDBACK = ACTUAL
@@ -32,7 +30,7 @@ DEFAULT_ANGULAR_VELOCITY = 0
 MIN_ANGULAR_VELOCITY = 0
 MAX_ANGULAR_VELOCITY = 0
 CYCLE_TIME = 100
-INTRO_GRAPHIC = linuxcnc.gif
+INTRO_GRAPHIC = splash.gif
 INTRO_TIME = 2
 PROGRAM_PREFIX = ./nc_files
 INCREMENTS = 10 mm, 1.0 mm, 0.10 mm, 0.01 mm, 1.0 inch, 0.1 inch, 0.01 inch
@@ -209,4 +207,3 @@ FF1 = 0
 FF2 = 0
 BIAS = 0
 MAX_ERROR = 0
-
