--- a/BallScrewControl.ini
+++ b/BallScrewControl.ini
@@ -10,7 +10,7 @@ DEBUG = 0x00000000
 VCP = BallScrewControl
 DISPLAY = qtvcp BallScrewControl
 EDITOR = gedit
-#PREFERENCE_FILE_PATH = qtdragon.pref
+PREFERENCE_FILE_PATH = BallScrewControl.pref
 POSITION_OFFSET = RELATIVE
 POSITION_FEEDBACK = ACTUAL
 GRIDS = 10mm 20mm 50mm 100mm 1in 2in 5in 10in
@@ -34,8 +34,8 @@ INTRO_GRAPHIC = splash.gif
 INTRO_TIME = 2
 PROGRAM_PREFIX = ./nc_files
 INCREMENTS = 10 mm, 1.0 mm, 0.10 mm, 0.01 mm, 1.0 inch, 0.1 inch, 0.01 inch
-# MDI_HISTORY_FILE = mdi_history.dat
-LOG_FILE = qtdragon.log
+MDI_HISTORY_FILE = BallScrewControl_mdi_history.dat
+LOG_FILE = BallScrewControl.log
 #TOOL_EDITOR = tooledit
 CONFIRM_EXIT = True
 
@@ -58,7 +58,7 @@ CYCLE_TIME = 0.100
 TOOL_TABLE = tool.tbl
 
 [RS274NGC]
-PARAMETER_FILE = qtdragon.var
+PARAMETER_FILE = BallScrewControl.var
 RS274NGC_STARTUP_CODE = G17 G21 G40 G43H0 G54 G64P0.005 G80 G90 G94 G97 M5 M9
 #SUBROUTINE_PATH = ../../../../nc_files/probe/basic_probe/macros
 FEATURES=12
@@ -83,7 +83,7 @@ DEFAULT_LINEAR_VELOCITY = 50.00
 SPINDLES = 1
 
 [HAL]
-#HALUI = halui
+HALUI = halui
 HALFILE = core_sim.hal
 HALFILE = simulated_home.hal
 HALFILE = BallScrewControlTest.hal
