Splitted into 2 apps

--- a/BallScrewVCP.ini
+++ b/BallScrewVCP.ini
@@ -3,14 +3,14 @@
 
 [EMC]
 VERSION = 1.1
-MACHINE = BallScrewControl
+MACHINE = BallScrewVCP
 DEBUG = 0x00000000
 
 [DISPLAY]
-VCP = BallScrewControl
-DISPLAY = qtvcp BallScrewControl
+VCP = BallScrewVCP
+DISPLAY = qtvcp BallScrewVCP
 EDITOR = gedit
-PREFERENCE_FILE_PATH = BallScrewControl.pref
+PREFERENCE_FILE_PATH = BallScrewVCP.pref
 POSITION_OFFSET = RELATIVE
 POSITION_FEEDBACK = ACTUAL
 GRIDS = 10mm 20mm 50mm 100mm 1in 2in 5in 10in
@@ -34,8 +34,8 @@ INTRO_GRAPHIC = splash.gif
 INTRO_TIME = 2
 PROGRAM_PREFIX = ./nc_files
 INCREMENTS = 10 mm, 1.0 mm, 0.10 mm, 0.01 mm, 1.0 inch, 0.1 inch, 0.01 inch
-MDI_HISTORY_FILE = BallScrewControl_mdi_history.dat
-LOG_FILE = BallScrewControl.log
+MDI_HISTORY_FILE = BallScrewVCP_mdi_history.dat
+LOG_FILE = BallScrewVCP.log
 #TOOL_EDITOR = tooledit
 CONFIRM_EXIT = True
 
@@ -58,7 +58,7 @@ CYCLE_TIME = 0.100
 TOOL_TABLE = tool.tbl
 
 [RS274NGC]
-PARAMETER_FILE = BallScrewControl.var
+PARAMETER_FILE = BallScrewVCP.var
 RS274NGC_STARTUP_CODE = G17 G21 G40 G43H0 G54 G64P0.005 G80 G90 G94 G97 M5 M9
 #SUBROUTINE_PATH = ../../../../nc_files/probe/basic_probe/macros
 FEATURES=12
@@ -86,9 +86,9 @@ SPINDLES = 1
 HALUI = halui
 HALFILE = core_sim.hal
 HALFILE = simulated_home.hal
-HALFILE = BallScrewControlTest.hal
+HALFILE = BallScrewVCP_Test.hal
 #HALFILE = custom.hal
-POSTGUI_HALFILE = BallScrewControl_postgui.hal
+POSTGUI_HALFILE = BallScrewVCP_postgui.hal
 
 [HALUI]
 # no content
