--- a/BallScrewVCP.ini
+++ b/BallScrewVCP.ini
@@ -207,3 +207,84 @@ FF1 = 0
 FF2 = 0
 BIAS = 0
 MAX_ERROR = 0
+
+#1
+#[BALLSCREWPARAMS]
+#NOM_VEL = 2.5
+#NOM_VEL_MIN = 2.0
+#NOM_VEL_MAX = 3.0
+#TRAVEL = 100.0
+#TRAVEL_MIN = 50.0
+#TRAVEL_MAX = 150.0
+#GEAR = 3.0
+#GEAR_MIN = 1.0
+#GEAR_MAX = 5.0
+#NOM_ACCEL = 200.0
+#NOM_ACCEL_MIN = 100.0
+#NOM_ACCEL_MAX = 200.0
+#PITCH = 8.0
+#PITCH_MIN = 1.0
+#PITCH_MAX = 10.0
+#TYPE = 1
+#DATE = 2020_09_21_01_10
+#MODEL = 123456
+#PART = 1111
+#LOGFILE = BallScrewVCP_test.log
+
+#2
+#[BALLSCREWPARAMS]
+#DURATION = 30.0
+#DURATION_MIN = 10.0
+#DURATION_MAX = 50.0
+#BRAKE_TORQUE = 5.0
+#BRAKE_TORQUE_MIN = 1.0
+#BRAKE_TORQUE_MAX = 10.0
+#GEAR = 2.0
+#GEAR_MIN = 1.0
+#GEAR_MAX = 5.0
+#NOM_VEL = 200.0
+#NOM_VEL_MIN = 100.0
+#NOM_VEL_MAX = 300.0
+#TYPE = 2
+#DATE = 2020_09_21_01_10
+#MODEL = TODO change on release
+#PART = 2222
+#LOGFILE = BallScrewVCP_test.log
+
+#3
+[BALLSCREWPARAMS]
+NOM_LOAD = 4000.0
+NOM_LOAD_MIN = 1000.0
+NOM_LOAD_MAX = 10000.0
+NOM_POS_MEASURE = 300.0
+NOM_POS_MEASURE_MIN = 100.0
+NOM_POS_MEASURE_MAX = 500.0
+GEAR = 3.0
+GEAR_MIN = 1.0
+GEAR_MAX = 5.0
+NOM_ACCEL_IDLE = 300.0
+NOM_ACCEL_IDLE_MIN = 100.0
+NOM_ACCEL_IDLE_MAX = 500.0
+PITCH = 8.0
+PITCH_MIN = 1.0
+PITCH_MAX = 10.0
+NOM_ACCEL_MEASURE = 100.0
+NOM_ACCEL_MEASURE_MIN = 50.0
+NOM_ACCEL_MEASURE_MAX = 150.0
+NOM_VEL_MEASURE = 50.0
+NOM_VEL_MEASURE_MIN = 10.0
+NOM_VEL_MEASURE_MAX = 100.0
+NOM_VEL_IDLE = 2500.0
+NOM_VEL_IDLE_MIN = 1000.0
+NOM_VEL_IDLE_MAX = 5000.0
+NOM_DSP_MEASURE = 3.0
+NOM_DSP_MEASURE_MIN = 1.0
+NOM_DSP_MEASURE_MAX = 5.0
+NOM_DSP_IDLE = 100.0
+NOM_DSP_IDLE_MIN = 50.0
+NOM_DSP_IDLE_MAX = 150.0
+TYPE = 3
+DATE = 2020_09_21_01_10
+MODEL = 123456
+PART = 3333
+LOGFILE = BallScrewVCP_test.log
