BallScrewVCP splitted into separate RT apps BallScrewVCP1-4 for greater performance. Also error found why EMC not started - because python 2.7 ConfigParser dont't support multiple HAL files records in INI

--- a/BallScrewVCP_template.ini
+++ b/BallScrewVCP_template.ini
@@ -84,11 +84,9 @@ SPINDLES = 1
 
 [HAL]
 HALUI = halui
-HALFILE = core_sim.hal
-HALFILE = simulated_home.hal
-HALFILE = BallScrewVCP_Test.hal
+HALFILE = core_sim.hal simulated_home.hal BallScrewVCP_Test.hal
 #HALFILE = custom.hal
-POSTGUI_HALFILE = BallScrewVCP_postgui.hal
+POSTGUI_HALFILE = BallScrewVCP1_postgui.hal
 
 [HALUI]
 # no content
