--- a/BallScrewVCP_template.ini
+++ b/BallScrewVCP_template.ini
@@ -3,12 +3,12 @@
 
 [EMC]
 VERSION = 1.1
-MACHINE = BallScrewVCP
+MACHINE = {{MACHINE}}
 DEBUG = 0x00000000
 
 [DISPLAY]
-VCP = BallScrewVCP
-DISPLAY = qtvcp BallScrewVCP
+VCP = {{VCP}}
+DISPLAY = qtvcp {{DISPLAY}}
 EDITOR = gedit
 PREFERENCE_FILE_PATH = BallScrewVCP.pref
 POSITION_OFFSET = RELATIVE
@@ -84,9 +84,11 @@ SPINDLES = 1
 
 [HAL]
 HALUI = halui
-HALFILE = core_sim.hal simulated_home.hal BallScrewVCP_Test.hal
+HALFILE = core_sim.hal
+HALFILE = simulated_home.hal
+HALFILE = BallScrewVCP_Test.hal
 #HALFILE = custom.hal
-POSTGUI_HALFILE = BallScrewVCP1_postgui.hal
+POSTGUI_HALFILE = {{POSTGUI_HALFILE}}
 
 [HALUI]
 # no content
@@ -192,7 +194,7 @@ HOME_IS_SHARED = 1
 
 [SPINDLE]
 SPINDLE_TYPE = openLoop
-SCALE = 
+#SCALE =
 PWM_FREQUENCY = 2000
 MAX_RPM = 18000
 MIN_RPM = 8000
@@ -205,3 +207,4 @@ FF1 = 0
 FF2 = 0
 BIAS = 0
 MAX_ERROR = 0
+
