--- a/PanelForAXIS/axis.ini
+++ b/PanelForAXIS/axis.ini
@@ -60,7 +60,7 @@ EMBED_TAB_NAME = Configure Task
 #EMBED_TAB_COMMAND = halcmd loadusr -Wn ConfigureTask pyvcp -g WxH+X+Y -c ConfigureTask <path/>ConfigureTask.xml
 # -H ./gladevcp-touchy.hal
 
-EMBED_TAB_COMMAND=gladevcp -c gladevcp -x {XID} -u ./ConfigureTaskGlade.py ./ConfigureTaskGlade.ui
+EMBED_TAB_COMMAND = gladevcp -c gladevcp -x {XID} -u ./ConfigureTaskGlade.py ./ConfigureTaskGlade.ui
 
 
 [FILTER]
