Added EFFICIENCY on forms 2.2 and 3.2, also label on form 3.2 vLine

--- a/BallScrew.ini
+++ b/BallScrew.ini
@@ -36,6 +36,10 @@ DURATION = 30
 DURATION_MIN = 10
 DURATION_MAX = 50
 
+EFFICIENCY = 0.9
+EFFICIENCY_MIN = 0.0
+EFFICIENCY_MAX = 1.0
+
 [TYPE_3]
 GEAR = 3.0
 GEAR_MIN = 1.0
