Form 3.2 time logic, time_range spinbox etc.

--- a/BallScrew.ini
+++ b/BallScrew.ini
@@ -34,7 +34,8 @@ BRAKE_TORQUE_MAX = 10.0
 
 DURATION = 30
 DURATION_MIN = 10
-DURATION_MAX = 50
+DURATION_MAX = 120
+#DURATION_MAX = 50
 
 EFFICIENCY = 0.9
 EFFICIENCY_MIN = 0.0
