Added MICROSTEP and SCALE to forms 2.1-2.4 and ini

--- a/BallScrew.ini
+++ b/BallScrew.ini
@@ -19,6 +19,10 @@ NOM_ACCEL = 300.0
 NOM_ACCEL_MIN = 100.0
 NOM_ACCEL_MAX = 500.0
 
+MICROSTEP = 360
+MICROSTEP_MIN = 360
+MICROSTEP_MAX = 360
+
 [TYPE_2]
 GEAR = 2.0
 GEAR_MIN = 1.0
@@ -40,6 +44,10 @@ DURATION_MAX = 120
 EFFICIENCY = 0.9
 EFFICIENCY_MIN = 0.0
 EFFICIENCY_MAX = 1.0
+
+MICROSTEP = 360
+MICROSTEP_MIN = 360
+MICROSTEP_MAX = 360
 
 [TYPE_3]
 GEAR = 3.0
@@ -81,6 +89,10 @@ NOM_LOAD_MAX = 10000.0
 NOM_POS_MEASURE = 300.0
 NOM_POS_MEASURE_MIN = 100.0
 NOM_POS_MEASURE_MAX = 500.0
+
+MICROSTEP = 360
+MICROSTEP_MIN = 360
+MICROSTEP_MAX = 360
 
 [TYPE_4]
 GEAR = 3.0
@@ -126,3 +138,7 @@ N_MAX = 150.0
 LOG_FREQ = 1
 LOG_FREQ_MIN = 1
 LOG_FREQ_MAX = 100
+
+MICROSTEP = 360
+MICROSTEP_MIN = 360
+MICROSTEP_MAX = 360
