Minor changes (forms 3.x look unification, added sliders on form 3.2, added SCALE_ENCODER to ini, separate HAL for axial and perpendicular)

--- a/BallScrewVCP_template.ini
+++ b/BallScrewVCP_template.ini
@@ -87,6 +87,7 @@ HALUI = halui
 HALFILE = core_sim.hal
 HALFILE = simulated_home.hal
 HALFILE = BallScrewVCP_Test.hal
+HALFILE = {{BALL_SCREW_VCP_HAL}}
 #HALFILE = custom.hal
 POSTGUI_HALFILE = {{POSTGUI_HALFILE}}
 
